--- a/README.adoc
+++ b/README.adoc
@@ -10,7 +10,7 @@ Locate and download individual ZIP files from the `data` subfolder, or clone or 
 
 - Update 2024-10-19 -- I am now extracting individual source code listing files from some of the older floppy disk images in the database. For example, _Learning C++,_ one of my more popular books of old, now includes in its ZIP archive the original two floppy disk images plus new folder `LCPP` containing all of the individual listing files as they would be after installing the diskettes. I was unable to provide these files because all the old sources had been destroyed many years ago, and like many of you, up until now, I was unable to run the original installation programs under newer versions of Microsoft Windows--until I discovered the following information, that is.
 
-NOTE: To run old DOS .EXE and .COM programs found in some of these archives, you either need a vintage computer running MS-DOS or an early Windows, or you can do as I did: run the link::https://www.winehq.org/[Wine] and link::https://www.dosbox.com/[DOSbox] emulators in Linux. I used those tools, for example, to run some of the installation programs found in some older ZIP archive disk images.
+NOTE: To run old DOS .EXE and .COM programs found in some of these archives, you either need a vintage computer running MS-DOS or an early Windows, or you can do as I did: run the link:https://www.winehq.org/[Wine] and link:https://www.dosbox.com/[DOSbox] emulators in Linux. I used those tools, for example, to run some of the installation programs found in some older ZIP archive disk images.
 
 - Update 2019-12-12 -- I'm very happy to report that I now making available 12 disk masters to many of my published books that came with "floppy" disks in various formats. Fetch and pull in the new entries, or clone the repository to get them all. See the full article for a list of the new master images.
 
